# lp-diagrams-svg

./: .gitignore  README.md  lp-diagrams-svg.cabal  stack.yaml
Graphics/Diagrams/: SVG.hs  SVG2.hs
Graphics/Diagrams/Backend/: SVGTree.hs
examples/: Main.hs
