name:           lp-diagrams-svg
version:        1.0
category:       Graphics
synopsis:       SVG Backend for lp-diagrams
license:        AGPL-3
license-file:   LICENSE
author:         Jean-Philippe Bernardy
maintainer:     jeanphilippe.bernardy@gmail.com
Cabal-Version:  >= 1.18
build-type:     Simple

library
  -- build-depends: directory>=1.2
  build-depends: lp-diagrams
  build-depends: base
               , lucid-svg
               , text
               , containers
               , lens
               , svg-tree
               , mtl
               , linear
               , JuicyPixels
               , FontyFruity
               , vector
  -- exposed-modules: Graphics.Diagrams.SVG
  exposed-modules: Graphics.Diagrams.SVG2

  default-language:    Haskell2010

executable lp-diagrams-svg-example
  hs-source-dirs: examples
  main-is: Main.hs
  build-depends: lp-diagrams-svg
  build-depends: lp-diagrams
  build-depends: base
               , containers
               , lens
               -- , svg-tree
               -- , mtl
               -- , linear
               -- , FontyFruity
